kubernetes_setting/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  labels: 
    app: backend-app
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template: 
    metadata:
      labels:
        app: backend-app
        tier: backend
    spec:
      containers:
        - name: backend-app
          image: 258166918634.dkr.ecr.ap-northeast-2.amazonaws.com/codecearch:latest
          ports:
            - name: nestjs
              containerPort: 3001
            - name: socket
              containerPort: 5000
