kubernetes_setting/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cearch-backend ## VERY VERY IMPORTANT - NGINX PROXYPASS needs this name
  labels: 
    app: backend-app
    tier: backend
spec:
  #type: Cluster IP is a default service
  type: NodePort
  selector:
    app: backend-app
  ports: 
    - name: nestjs
      port: 3001
      targetPort: 3001 #
