kubernetes_setting/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cearch-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:258166918634:certificate/ee8c3a74-484c-4e29-be9a-00845e5d6fc8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - host: www.codesearch.shop
    http:
      paths:
      - pathType: Prefix
        path: /*
        backend:
          service: 
            name: cearch-frontend
            port:
              number: 3000

  - host: api.codesearch.shop
    http:
      paths:
      - pathType: Prefix
        path: /*
        backend:
          service:
            name: cearch-backend
            port:
              number: 3001
